# loomabase

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  fuzz.yml
benchmarks/: README.md
demo/offline-conflicts/: README.md  app.js  index.html  styles.css
demo/phone-desktop/: README.md  app.js  index.html  server.mjs  styles.css
deploy/: compose.yml  nginx.conf  prometheus-alerts.yml
docs/: architecture.md  offline-reconnect-smoke-test.md  production-runbook.md  quickstart-supabase-5min.md  security-audit-scope.md  supabase.md  vision.md
examples/: generate_sdks.rs  http_offline_roundtrip.rs  http_partial_replica.rs  js_persistent_todo.mjs  js_todo_roundtrip.mjs  offline_roundtrip.rs  phone_desktop_offline_reconnect.mjs  simulation_report.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: partial_replica.rs  sync_payload.rs
loomabase-ffi/: Cargo.toml
loomabase-ffi/include/: loomabase.h
loomabase-ffi/src/: lib.rs
loomabase-ffi/tests/: ffi.rs
ops/: backup.sh  k6-sync.js  restore-drill.sh
src/: auth.rs  benchmark_main.rs  client.rs  codegen.rs  crdt.rs  error.rs  explain.rs  http.rs  lib.rs  policy.rs  replica.rs  schema.rs  server.rs  server_main.rs  simulator.rs
supabase/: config.toml  runtime-role.sql
supabase/functions/loomabase-sync/: index.ts
tests/: anti_entropy.rs  auth.rs  crdt_laws.rs  custom_contract.rs  delete_lifecycle.rs  http_server.rs  model_convergence.rs  multi_table.rs  multi_tenancy.rs  offline_convergence.rs  partial_replica.rs  platform_foundations.rs  postgres_integration.rs  rls.rs  schema_migration.rs  security_boundaries.rs  soak.rs  sqlite_atomicity.rs
