[workspace]
members = ["loomabase-ffi"]
exclude = ["fuzz"]

[package]
name = "loomabase"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Offline-first LWW CRDT synchronization core for SQLite and PostgreSQL"
repository = "https://github.com/loomabase/loomabase"
readme = "README.md"
keywords = ["crdt", "offline-first", "postgresql", "sqlite", "sync"]
categories = ["database", "asynchronous"]

[dependencies]
axum = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
futures-util = "0.3"
hmac = { version = "0.12", optional = true }
jsonwebtoken = { version = "10.4", optional = true, default-features = false, features = ["aws_lc_rs", "use_pem"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx-core = { version = "=0.9.0", features = ["_rt-tokio", "_tls-rustls-ring-webpki", "json"] }
sqlx-postgres = { version = "=0.8.6", features = ["json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tower = { version = "0.5", optional = true, features = ["limit"] }
tower-http = { version = "0.6", optional = true, features = ["timeout", "trace"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[features]
# Optional HTTP server surface and the `loomabase-server` binary.
server = [
    "dep:axum",
    "dep:base64",
    "dep:hmac",
    "dep:jsonwebtoken",
    "dep:reqwest",
    "dep:sha2",
    "dep:tower-http",
    "dep:tower",
    "dep:tracing",
    "dep:tracing-subscriber",
    "tokio/net",
    "tokio/signal",
    "tokio/time",
]

[[bin]]
name = "loomabase-server"
path = "src/server_main.rs"
required-features = ["server"]

[[bin]]
name = "loomabase-bench"
path = "src/benchmark_main.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
too_many_lines = "allow"
