[package]
name = "loomabase-ffi"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "C ABI bindings to the Loomabase CRDT protocol core, for language SDKs"
repository = "https://github.com/loomabase/loomabase"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
loomabase = { path = ".." }
serde_json = "1"

[lints.rust]
# Unlike the core crate, this binding necessarily uses `unsafe` for the C ABI.
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
